# deep-sea-shell

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  example.dss  run.sh  setup.sh  test.dss
dss/: cli.cpp  cli.h  dss_lang.h  dss_utils.h  example.cpp  init.h  runtime.cpp  runtime.h  utils.h  version.h
source/: cli.cpp  cli.h  dss_lang.h  example.cpp  lang.h  main.cpp  runtime.cpp  runtime.h  utils.h
source/dss/: DSS.cpp  DSS.h  cli.cpp  cli.h  dss_lang.h  example.cpp  runtime.cpp  runtime.h  utils.h
